WexGit/Wex_DX/force-app/main/default/objects/Customer_Dashboard_Services__c/Customer_Dashboard_Services__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Customer Dashboard Services</label>
</CustomObject>