WexGit/Wex_DX/force-app/main/default/objects/Customer_Dashboard_Services__c/fields/Customer_Details_EndPoint__c.field-meta.xml
<CustomField>
    <fullName>Customer_Details_EndPoint__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Details EndPoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>