WexGit/Wex_DX/force-app/main/default/objects/Customer_Dashboard_Services__c/fields/Generic_Program__c.field-meta.xml
<CustomField>
    <fullName>Generic_Program__c</fullName>
    <description>If the source system doesn&apos;t return a program, use this ID.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Generic Program</label>
    <length>20</length>
    <type>Text</type>
</CustomField>